# proyectoBot

./: enviar_mensaje.py  enviar_mensaje_template.py  init_database.py  main.py  pyproject.toml  requirements.txt  seed_database.py  verificar_configuracion.py  verificar_permisos.py  webhook_server.py  whatsapp_api.py
API/: API.py
Models/: chat.py  detalle_pedido.py  ingrediente.py  ingrediente_producto.py  pedido.py  producto.py
Services/: ChatService.py  ClienteService.py  PedidoService.py  ProductoService.py  RepartidorService.py
Util/: audio_util.py  calificacion_util.py  coordenadas_gifs.py  database.py  estado.py  get_type.py  menus.py  procesar_texto_gemini.py  product_util.py  repartidor_util.py
