[project]
name = "obligatorioalgoritmos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "osmnx>=1.9.0",
    "networkx>=3.0",
    "pillow>=10.0",
    "matplotlib>=3.8.0",
]
